# blinky

./: .gitignore  .gitmodules  .plano.py  .planofile  Containerfile  Dockerfile  Makefile  README.md  plano
boneyard/: errors.py
files/: app.css  app.js  data.html  gesso.js  index.html  mini.html  pretty-data.html  pretty.html  site.css  site.js  table.html
misc/: blinky-tape-config.py  blinky-tape.service.in  blinky.service.in  config.py  notes.md  qpid.py
packaging/copr/: Makefile  blinky.spec.in
python/: brbn  brbn.py  brbn2.py  bullseye  faller.py  pencil.py  plano.py  spindle.py
python/blinky/: app.py  appveyor.py  brbn.py  circle.py  circleci.py  github.py  gitlab.py  jenkins.py  main.py  model.py  tape.py  travis.py  travisci.py
scripts/: configure-file  install-files  run-tests  test-blinky  test-blinky-tape
static/: app.css  app.js  gesso.js  index.html  main.css  main.html  main.js  pretty-data.html  pretty.html  pretty.js  sortable.js
subrepos/: brbn
subrepos/brbn/: .gitignore  .gitrepo  .plano.py  MANIFEST.in  README.md  pyproject.toml
subrepos/brbn/.github/workflows/: main.yaml
subrepos/brbn/src/brbn/: main.py  testapp.py  tests.py
subrepos/brbn/subrepos/plano/: .gitrepo
subrepos/bullseye/: .gitrepo
subrepos/bullseye/src/bullseye/: main.py
subrepos/plano/: .gitrepo
subrepos/plano/src/plano/: main.py
